--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "cron/cron-bundle": "^2.4",
         "guzzlehttp/guzzle": "~6.0",
         "paquettg/php-html-parser": "^2.2",
         "sensio/framework-extra-bundle": "^5.1",
