--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,11 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^8.0",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*"
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
